sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value i
    for (j <- getNombreValeurs() to 0 by -1; i <-0 to i-1){
                                                      ^