sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var trie = false
  while(!trie){
    trie = true
    for (j <- getNombreValeurs() to 0 by -1; i <-0 to i-1){
      
      if (getValeur(i) > getValeur(i+1)){
        echange(i,i+1)
        trie = false
      }
      
    }
    
  }
  
}